--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "dshr.github.io",
   "version": "1.0.0",
   "dependencies": {
-    "autoprefixer-core": "^5.2.1",
-    "grunt": "~0.4.1",
-    "grunt-browser-sync": "^2.2.0",
-    "grunt-contrib-stylus": "^0.21.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-postcss": "^0.5.2"
+    "autoprefixer": "latest",
+    "grunt": "latest",
+    "grunt-browser-sync": "latest",
+    "grunt-contrib-stylus": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-postcss": "latest"
   }
 }
